UI touchups to make UX better

--- a/Brief/BriefItemDetailViewController.xib
+++ b/Brief/BriefItemDetailViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BriefItemDetailViewController" customModule="Brief" customModuleProvider="target">
             <connections>
+                <outlet property="noCommentLabel" destination="Dus-Mn-Afk" id="Jpk-0L-NJN"/>
                 <outlet property="table" destination="1Qc-PS-f05" id="wha-X6-b6q"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -24,6 +25,12 @@
                         <outlet property="delegate" destination="-1" id="Xyb-Fk-x7p"/>
                     </connections>
                 </tableView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No Comments" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dus-Mn-Afk">
+                    <rect key="frame" x="8" y="180" width="304" height="99"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
